--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@chakra-ui/react": "^1.7.4",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@next-auth/prisma-adapter": "^1.0.1",
+    "@prisma/client": "^3.8.0",
     "framer-motion": "^5",
     "next": "12.0.7",
+    "next-auth": "^4.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
@@ -22,6 +25,7 @@
     "@types/react": "17.0.38",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
+    "prisma": "^3.8.0",
     "typescript": "4.5.4"
   }
 }
